album adapter and flows

--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -28,7 +28,7 @@
             tools:layout_editor_absoluteY="493dp" />
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/postListView"
+            android:id="@+id/albumPostListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="8dp"
