--- a/app/src/main/res/layout/album_thumbnail.xml
+++ b/app/src/main/res/layout/album_thumbnail.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/albumThumbnail"
@@ -25,6 +25,7 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Name" />
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
